fixed epub covers not saving

--- a/src/assets/css/tailwindcss.css
+++ b/src/assets/css/tailwindcss.css
@@ -554,12 +554,12 @@ video {
   z-index: 5;
 }
 
-.m-\[-2\%\] {
-  margin: -2%;
-}
-
 .m-0 {
   margin: 0px;
+}
+
+.m-\[-2\%\] {
+  margin: -2%;
 }
 
 .mx-0 {
@@ -569,6 +569,10 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
 }
 
 .ml-2 {
@@ -583,26 +587,6 @@ video {
   margin-right: 0.25rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -611,24 +595,32 @@ video {
   margin-right: 0.625rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-12 {
   margin-top: 3rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-auto {
+  margin-top: auto;
 }
 
 .line-clamp-3 {
@@ -673,6 +665,10 @@ video {
   height: 110%;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
 .h-\[213px\] {
   height: 213px;
 }
@@ -689,12 +685,12 @@ video {
   height: 100%;
 }
 
-.h-\[20px\] {
-  height: 20px;
-}
-
 .min-h-\[17px\] {
   min-height: 17px;
+}
+
+.w-\[\.5px\] {
+  width: .5px;
 }
 
 .w-\[110\%\] {
@@ -709,20 +705,16 @@ video {
   width: 250px;
 }
 
+.w-\[300px\] {
+  width: 300px;
+}
+
 .w-\[450px\] {
   width: 450px;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[\.5px\] {
-  width: .5px;
 }
 
 .min-w-\[17px\] {
@@ -811,10 +803,6 @@ video {
   gap: 2rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -835,24 +823,16 @@ video {
   border-radius: 15px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-\[5px\] {
   border-radius: 5px;
 }
 
-.border-\[0\.5px\] {
-  border-width: 0.5px;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-b-\[\.5px\] {
   border-bottom-width: .5px;
-}
-
-.border-b-\[0\.5px\] {
-  border-bottom-width: 0.5px;
 }
 
 .border-r-\[0\.5px\] {
@@ -873,6 +853,11 @@ video {
   background-color: rgb(20 20 20 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F3F3F3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+}
+
 .bg-\[rgba\(0\2c 0\2c 0\2c \.7\)\] {
   background-color: rgba(0,0,0,.7);
 }
@@ -890,23 +875,13 @@ video {
   background-color: rgb(0 0 0 / 0.9);
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F3F3F3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
 
-.bg-\[\#f3f3f3\] {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -975,6 +950,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
 .px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
@@ -990,6 +970,11 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1000,38 +985,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
 
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-7 {
@@ -1044,6 +1005,10 @@ video {
 
 .pt-2\.5 {
   padding-top: 0.625rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
 }
 
 .text-center {
@@ -1062,6 +1027,11 @@ video {
   font-size: 24px !important;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-\[13px\] {
   font-size: 13px;
 }
@@ -1077,11 +1047,6 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold {
@@ -1154,6 +1119,11 @@ video {
   border-color: 1px solid rgba(0,0,0,0.1);
 }
 
+.hover\:bg-\[\#EBEBEB\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 235 235 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#ebebeb\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
@@ -1162,11 +1132,6 @@ video {
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#EBEBEB\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
 .hover\:stroke-\[var\(--primary-red-color\)\]:hover {
